@@ -4,6 +4,7 @@ Revision history for Perl module Carp::Assert
     - Fixed typos in pod. RT#95017 - thanks Daniel Lintott.
     - Added links to a number of modules in SEE ALSO.
     - Added links to wikipedia page on assert.h
+    - Add "use warnings" and bumped min perl version to 5.6.0
     - Reformatted Changes as per CPAN::Changes::Spec
 
 0.20 2007-01-05 MSCHWERN
